・効果音の修正、ResourceManager側で衝突音を確保するように変更 ・衝突音・決定音・キャンセル音を鳴らすようにした ・画面遷移時に暗転するようにした ・マップ情報に作者名を追加 ・Constantsで定義されているピッチ幅以外は無視するように変更(ノイズで超低音が入ってしまうことへの対処)

--- a/src/PitchPitch/Properties/Resources.resx
+++ b/src/PitchPitch/Properties/Resources.resx
@@ -137,10 +137,6 @@
     <value>map</value>
     <comment>ディレクトリ名-マップデータ</comment>
   </data>
-  <data name="Dirname_Sound" xml:space="preserve">
-    <value>se</value>
-    <comment>ディレクトリ名-効果音</comment>
-  </data>
   <data name="Explanation_Calibration" xml:space="preserve">
     <value>Returnを押したまま発声して下さい</value>
     <comment>説明文字列</comment>
@@ -243,6 +239,10 @@
   </data>
   <data name="Str_Calibrating" xml:space="preserve">
     <value>計測中…</value>
+    <comment>文字列</comment>
+  </data>
+  <data name="Str_CannotAnalyze" xml:space="preserve">
+    <value>計測に失敗しました</value>
     <comment>文字列</comment>
   </data>
   <data name="Str_Distance" xml:space="preserve">
