--- a/src/PitchPitch/Properties/Resources.resx
+++ b/src/PitchPitch/Properties/Resources.resx
@@ -269,6 +269,14 @@
     <value>低音</value>
     <comment>文字列</comment>
   </data>
+  <data name="Str_OctaveSelecting" xml:space="preserve">
+    <value>オクターブ単位でキーの高さを変更できます</value>
+    <comment>文字列</comment>
+  </data>
+  <data name="Str_OctaveSelecting_Operation" xml:space="preserve">
+    <value>↑↓で選択, Returnで決定, Escでキャンセル</value>
+    <comment>文字列</comment>
+  </data>
   <data name="Str_Pitch" xml:space="preserve">
     <value>高さ</value>
     <comment>文字列</comment>
